fix: disable scrollbar when not-pinned

--- a/packages/charts/src/components/tooltip/components/_tooltip.scss
+++ b/packages/charts/src/components/tooltip/components/_tooltip.scss
@@ -60,9 +60,12 @@ $tableRowHoverSelectedColor: tintOrShade($euiFocusBackgroundColor, 0, 10%);
   }
 
   &__tableWrapper {
-    overflow: auto;
+    overflow: hidden;
     @include euiScrollBar;
     background-color: $euiColorEmptyShade;
+    &--pinned {
+      overflow: auto;
+    }
   }
 
   &__table {
